--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "description": "",
   "devDependencies": {
     "vitepress": "^1.5.0"
+  },
+  "dependencies": {
+    "react-icons": "^5.4.0"
   }
 }
